new-wolves: Added new wolves

--- a/src/main/resources/assets/stacywolves/lang/en_US.lang
+++ b/src/main/resources/assets/stacywolves/lang/en_US.lang
@@ -14,7 +14,7 @@ entity.stacywolves.EntityCakeWolf.name=Cake Wolf
 entity.stacywolves.EntityCoalWolf.name=Coal Wolf
 entity.stacywolves.EntityCookieWolf.name=Cookie Wolf
 entity.stacywolves.EntityCowWolf.name=Cow Wolf
-entity.stacywolves.EntityCraftingWolf.name=Crafting Table Wolf
+entity.stacywolves.EntityCraftingTableWolf.name=Crafting Table Wolf
 entity.stacywolves.EntityDesertWolf.name=Desert Wolf
 entity.stacywolves.EntityDonkeyWolf.name=Donkey Wolf
 entity.stacywolves.EntityDiamondWolf.name=Diamond Wolf
@@ -107,13 +107,12 @@ item.stacywolves.wolf_clicker.tooltip=Allows you to give basic commands to your 
 
 item.stacywolves.wolf_food_inky_bone.name=Inky Bone
 item.stacywolves.wolf_food_inky_bone.tooltip=Sometimes a squid wolf will cover a bone in ink as a tasty snack.
-
 item.stacywolves.wolf_food_solid_prismarine_bone.name=Solid Prismarine Bone
-item.stacywolves.wolf_food_solid_prismarine_bone.tooltip=This bone is so hard that only the mighty Guardian Wolf dare chew on it.
-item.stacywolves.wolf_food_witch_bone.name=Glowbone
-item.stacywolves.wolf_food_witch_bone.tooltip=Witch Wolves will fetch these for their mystical mistresses in order to help brew potions.
+item.stacywolves.wolf_food_solid_prismarine_bone.tooltip=This bone is so tough that only the mighty Guardian Wolf dare chew on it.
+item.stacywolves.wolf_food_glow_bone.name=Glowbone
+item.stacywolves.wolf_food_glow_bone.tooltip=Witch Wolves will fetch these for their mystical mistresses in order to help brew potions.
 item.stacywolves.wolf_food_book_bone.name=Well Read Bone
-item.stacywolves.wolf_food_book_bone.tooltip=Bookworm Wolves love to read these before eating them.
+item.stacywolves.wolf_food_book_bone.tooltip=Black and white and read all over.;Bookworm Wolves love to read these before eating them.
 item.stacywolves.wolf_food_sunflower_bone.name=Sunflower Bone
 item.stacywolves.wolf_food_sunflower_bone.tooltip=This cheerful looking bone looks like it might impress the Sunflower Wolf.
 item.stacywolves.wolf_food_cookie_bone.name=Cookie Bone
@@ -122,14 +121,14 @@ item.stacywolves.wolf_food_melon_bone.name=Melon Bone
 item.stacywolves.wolf_food_melon_bone.tooltip=Juicy! Melon Wolves are sure to take a liking to those who possess it.
 item.stacywolves.wolf_food_lapis_bone.name=Blue Bone
 item.stacywolves.wolf_food_lapis_bone.tooltip=This bone has been painted blue. Most likely to attract the attention of the elusive Lapis Wolf.
-item.stacywolves.wolf_food_coal_bone.name=Carbon Fiber Bone
-item.stacywolves.wolf_food_coal_bone.tooltip=This bone has been constructed of the finest coal. Guaranteed to turn the head of the discerning Coal Wolf.
+item.stacywolves.wolf_food_coal_bone.name=Carbone Fiber Bone
+item.stacywolves.wolf_food_coal_bone.tooltip=This bone has been constructed of the finest coal. ;Guaranteed to turn the head of the discerning Coal Wolf.
 item.stacywolves.wolf_food_red_sand_bone.name=Red Sand Bone
-item.stacywolves.wolf_food_red_sand_bone.tooltip=Bits of this bone manage to get everywhere. Better feed it to a Red Sand Wolf before it's too difficult to clean up.
+item.stacywolves.wolf_food_red_sand_bone.tooltip=Bits of this bone manage to get everywhere. ;Better feed it to a Red Sand Wolf before it's too difficult to clean up.
 item.stacywolves.wolf_food_fish_bone.name=Fishy Bone
-item.stacywolves.wolf_food_fish_bone.tooltip=This bone looks (and smells! pooooh-we!) like it came from a fish. The cat-like Ocelot Wolf would smell it a mile away.
+item.stacywolves.wolf_food_fish_bone.tooltip=This bone looks (and smells! pooooh-we!) like it came from a fish. ;The cat-like Ocelot Wolf would smell it a mile away.
 item.stacywolves.wolf_food_apple_bone.name=Apple on a Bone
-item.stacywolves.wolf_food_apple_bone.tooltip=Like a toffee apple, but less likely to ruin your teeth. Perhaps the Donkey Wolf will like it.
+item.stacywolves.wolf_food_apple_bone.tooltip=Like a toffee apple, but less likely to ruin your teeth. ;Perhaps the Donkey Wolf will like it.
 item.stacywolves.wolf_food_crafty_bone.name=Crafty Bone
 item.stacywolves.wolf_food_crafty_bone.tooltip=Welcome in any recipe, this bone might come in handy to the versatile Crafting Table Wolf.
 item.stacywolves.wolf_food_wheat_bone.name=Wheat Bone
