Added wolfSpawnDisabled and tamedWolvesNeverDie configuration options.

--- a/src/main/resources/assets/stacywolves/lang/en_US.lang
+++ b/src/main/resources/assets/stacywolves/lang/en_US.lang
@@ -104,6 +104,8 @@ item.stacywolves.wolf_transporter.unnamedcontents.tooltip=Contains {{!colors.lig
 item.stacywolves.wolf_transporter.namedcontents.tooltip=Contains {{!colors.light_purple}}{{type}}{{!colors.reset}}({{!colors.yellow}}{{name}}{{!colors.reset}})
 item.stacywolves.wolf_clicker.name=Wolf Training Clicker
 item.stacywolves.wolf_clicker.tooltip=Allows you to give basic commands to your lupine pals;Right click: Toggle wolf follow
+item.stacywolves.wolf_remover.name=Emergency Wolf Remover
+item.stacywolves.wolf_remover.tooltip=Right click a wolf to remove it. Use at your own risk.; Primarily for use if something goes wrong when tamedWolvesNeverDie is enabled.
 
 item.stacywolves.wolf_food_inky_bone.name=Inky Bone
 item.stacywolves.wolf_food_inky_bone.tooltip=Sometimes a squid wolf will cover a bone in ink as a tasty snack.
